# csc-435-zeromq-tutorial

./: .gitignore  .gitmodules  README.md
app-cpp/: CMakeLists.txt
app-cpp/include/: Server.hpp  Worker.hpp
app-cpp/src/: Client.cpp  Server.cpp  Worker.cpp
app-java/: pom.xml
app-java/src/main/java/csc435/app/: Client.java  Server.java  Worker.java  ZMQProxyWorker.java
